dsl/py-syntax/PromiseParser.py
# Generated from Promise.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class PromiseParser ( Parser ):

    grammarFileName = "Promise.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'predicate that'", "'location'", 
                     "'duration'", "'lane change'", "'lane gap'", "'distance to vehicle'", 
                     "'equal to'", "'less than'", "'greater than'", "'between'", 
                     "'and'", "'average'", "'variance'", "'collision'", 
                     "'stop'", "'promise'", "'('", "')'", "'['", "']'", 
                     "'m'", "'s'", "'km/h'", "'!'", "'&&'", "'||'", "'->'", 
                     "'-|'", "'-<'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NOT", "CON", "OPT", "SEQ", "UNTIL", 
                      "DAEMON", "ID", "INT", "FLOAT", "END", "WS" ]

    RULE_prog = 0
    RULE_factdef = 1
    RULE_fact = 2
    RULE_pfact = 3
    RULE_pfname = 4
    RULE_pred = 5
    RULE_algo = 6
    RULE_sfact = 7
    RULE_promisedef = 8
    RULE_promise = 9
    RULE_basepromise = 10
    RULE_param = 11
    RULE_value = 12
    RULE_unit = 13

    ruleNames =  [ "prog", "factdef", "fact", "pfact", "pfname", "pred", 
                   "algo", "sfact", "promisedef", "promise", "basepromise", 
                   "param", "value", "unit" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    NOT=25
    CON=26
    OPT=27
    SEQ=28
    UNTIL=29
    DAEMON=30
    ID=31
    INT=32
    FLOAT=33
    END=34
    WS=35

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def promisedef(self):
            return self.getTypedRuleContext(PromiseParser.PromisedefContext,0)


        def factdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromiseParser.FactdefContext)
            else:
                return self.getTypedRuleContext(PromiseParser.FactdefContext,i)


        def getRuleIndex(self):
            return PromiseParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PromiseParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PromiseParser.ID:
                self.state = 28
                self.factdef()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.promisedef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromiseParser.ID, 0)

        def fact(self):
            return self.getTypedRuleContext(PromiseParser.FactContext,0)


        def END(self):
            return self.getToken(PromiseParser.END, 0)

        def getRuleIndex(self):
            return PromiseParser.RULE_factdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactdef" ):
                listener.enterFactdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactdef" ):
                listener.exitFactdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactdef" ):
                return visitor.visitFactdef(self)
            else:
                return visitor.visitChildren(self)




    def factdef(self):

        localctx = PromiseParser.FactdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_factdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(PromiseParser.ID)
            self.state = 37
            self.match(PromiseParser.T__0)
            self.state = 38
            self.fact()
            self.state = 39
            self.match(PromiseParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sfact(self):
            return self.getTypedRuleContext(PromiseParser.SfactContext,0)


        def pfact(self):
            return self.getTypedRuleContext(PromiseParser.PfactContext,0)


        def getRuleIndex(self):
            return PromiseParser.RULE_fact

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFact" ):
                listener.enterFact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFact" ):
                listener.exitFact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFact" ):
                return visitor.visitFact(self)
            else:
                return visitor.visitChildren(self)




    def fact(self):

        localctx = PromiseParser.FactContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_fact)
        try:
            self.state = 43
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PromiseParser.T__14, PromiseParser.T__15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.sfact()
                pass
            elif token in [PromiseParser.T__2, PromiseParser.T__3, PromiseParser.T__4, PromiseParser.T__5, PromiseParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.pfact()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PfactContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pfname(self):
            return self.getTypedRuleContext(PromiseParser.PfnameContext,0)


        def pred(self):
            return self.getTypedRuleContext(PromiseParser.PredContext,0)


        def algo(self):
            return self.getTypedRuleContext(PromiseParser.AlgoContext,0)


        def getRuleIndex(self):
            return PromiseParser.RULE_pfact

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPfact" ):
                listener.enterPfact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPfact" ):
                listener.exitPfact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPfact" ):
                return visitor.visitPfact(self)
            else:
                return visitor.visitChildren(self)




    def pfact(self):

        localctx = PromiseParser.PfactContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pfact)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.pfname()
            self.state = 46
            self.match(PromiseParser.T__1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PromiseParser.T__12 or _la==PromiseParser.T__13:
                self.state = 47
                self.algo()


            self.state = 50
            self.pred()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PfnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PromiseParser.RULE_pfname

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LocationFactContext(PfnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PfnameContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocationFact" ):
                listener.enterLocationFact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocationFact" ):
                listener.exitLocationFact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocationFact" ):
                return visitor.visitLocationFact(self)
            else:
                return visitor.visitChildren(self)


    class DistanceToFactContext(PfnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PfnameContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(PromiseParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDistanceToFact" ):
                listener.enterDistanceToFact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDistanceToFact" ):
                listener.exitDistanceToFact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDistanceToFact" ):
                return visitor.visitDistanceToFact(self)
            else:
                return visitor.visitChildren(self)


    class LaneChangeFactContext(PfnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PfnameContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLaneChangeFact" ):
                listener.enterLaneChangeFact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLaneChangeFact" ):
                listener.exitLaneChangeFact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLaneChangeFact" ):
                return visitor.visitLaneChangeFact(self)
            else:
                return visitor.visitChildren(self)


    class DurationFactContext(PfnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PfnameContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDurationFact" ):
                listener.enterDurationFact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDurationFact" ):
                listener.exitDurationFact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDurationFact" ):
                return visitor.visitDurationFact(self)
            else:
                return visitor.visitChildren(self)


    class LaneGapFactContext(PfnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PfnameContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLaneGapFact" ):
                listener.enterLaneGapFact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLaneGapFact" ):
                listener.exitLaneGapFact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLaneGapFact" ):
                return visitor.visitLaneGapFact(self)
            else:
                return visitor.visitChildren(self)



    def pfname(self):

        localctx = PromiseParser.PfnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_pfname)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PromiseParser.T__2]:
                localctx = PromiseParser.LocationFactContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.match(PromiseParser.T__2)
                pass
            elif token in [PromiseParser.T__3]:
                localctx = PromiseParser.DurationFactContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(PromiseParser.T__3)
                pass
            elif token in [PromiseParser.T__4]:
                localctx = PromiseParser.LaneChangeFactContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.match(PromiseParser.T__4)
                pass
            elif token in [PromiseParser.T__5]:
                localctx = PromiseParser.LaneGapFactContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.match(PromiseParser.T__5)
                pass
            elif token in [PromiseParser.T__6]:
                localctx = PromiseParser.DistanceToFactContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.match(PromiseParser.T__6)
                self.state = 57
                self.match(PromiseParser.INT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PromiseParser.RULE_pred

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LessThanPredContext(PredContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PredContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def param(self):
            return self.getTypedRuleContext(PromiseParser.ParamContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessThanPred" ):
                listener.enterLessThanPred(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessThanPred" ):
                listener.exitLessThanPred(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessThanPred" ):
                return visitor.visitLessThanPred(self)
            else:
                return visitor.visitChildren(self)


    class EqualToPredContext(PredContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PredContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def param(self):
            return self.getTypedRuleContext(PromiseParser.ParamContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualToPred" ):
                listener.enterEqualToPred(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualToPred" ):
                listener.exitEqualToPred(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualToPred" ):
                return visitor.visitEqualToPred(self)
            else:
                return visitor.visitChildren(self)


    class GreaterThanPredContext(PredContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PredContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def param(self):
            return self.getTypedRuleContext(PromiseParser.ParamContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGreaterThanPred" ):
                listener.enterGreaterThanPred(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGreaterThanPred" ):
                listener.exitGreaterThanPred(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreaterThanPred" ):
                return visitor.visitGreaterThanPred(self)
            else:
                return visitor.visitChildren(self)


    class BetweenPredContext(PredContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PredContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromiseParser.ParamContext)
            else:
                return self.getTypedRuleContext(PromiseParser.ParamContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBetweenPred" ):
                listener.enterBetweenPred(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBetweenPred" ):
                listener.exitBetweenPred(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBetweenPred" ):
                return visitor.visitBetweenPred(self)
            else:
                return visitor.visitChildren(self)



    def pred(self):

        localctx = PromiseParser.PredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pred)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PromiseParser.T__7]:
                localctx = PromiseParser.EqualToPredContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(PromiseParser.T__7)
                self.state = 61
                self.param()
                pass
            elif token in [PromiseParser.T__8]:
                localctx = PromiseParser.LessThanPredContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(PromiseParser.T__8)
                self.state = 63
                self.param()
                pass
            elif token in [PromiseParser.T__9]:
                localctx = PromiseParser.GreaterThanPredContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(PromiseParser.T__9)
                self.state = 65
                self.param()
                pass
            elif token in [PromiseParser.T__10]:
                localctx = PromiseParser.BetweenPredContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.match(PromiseParser.T__10)
                self.state = 67
                self.param()
                self.state = 68
                self.match(PromiseParser.T__11)
                self.state = 69
                self.param()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AlgoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PromiseParser.RULE_algo

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AverageAlgoContext(AlgoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.AlgoContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAverageAlgo" ):
                listener.enterAverageAlgo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAverageAlgo" ):
                listener.exitAverageAlgo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAverageAlgo" ):
                return visitor.visitAverageAlgo(self)
            else:
                return visitor.visitChildren(self)


    class VarianceAlgoContext(AlgoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.AlgoContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarianceAlgo" ):
                listener.enterVarianceAlgo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarianceAlgo" ):
                listener.exitVarianceAlgo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarianceAlgo" ):
                return visitor.visitVarianceAlgo(self)
            else:
                return visitor.visitChildren(self)



    def algo(self):

        localctx = PromiseParser.AlgoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_algo)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PromiseParser.T__12]:
                localctx = PromiseParser.AverageAlgoContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(PromiseParser.T__12)
                pass
            elif token in [PromiseParser.T__13]:
                localctx = PromiseParser.VarianceAlgoContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(PromiseParser.T__13)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SfactContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PromiseParser.RULE_sfact

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StopFactContext(SfactContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.SfactContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStopFact" ):
                listener.enterStopFact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStopFact" ):
                listener.exitStopFact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStopFact" ):
                return visitor.visitStopFact(self)
            else:
                return visitor.visitChildren(self)


    class CollisionFactContext(SfactContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.SfactContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCollisionFact" ):
                listener.enterCollisionFact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCollisionFact" ):
                listener.exitCollisionFact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCollisionFact" ):
                return visitor.visitCollisionFact(self)
            else:
                return visitor.visitChildren(self)



    def sfact(self):

        localctx = PromiseParser.SfactContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_sfact)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PromiseParser.T__14]:
                localctx = PromiseParser.CollisionFactContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(PromiseParser.T__14)
                pass
            elif token in [PromiseParser.T__15]:
                localctx = PromiseParser.StopFactContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(PromiseParser.T__15)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PromisedefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def promise(self):
            return self.getTypedRuleContext(PromiseParser.PromiseContext,0)


        def END(self):
            return self.getToken(PromiseParser.END, 0)

        def getRuleIndex(self):
            return PromiseParser.RULE_promisedef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPromisedef" ):
                listener.enterPromisedef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPromisedef" ):
                listener.exitPromisedef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPromisedef" ):
                return visitor.visitPromisedef(self)
            else:
                return visitor.visitChildren(self)




    def promisedef(self):

        localctx = PromiseParser.PromisedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_promisedef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PromiseParser.T__16)
            self.state = 82
            self.match(PromiseParser.T__0)
            self.state = 83
            self.promise(0)
            self.state = 84
            self.match(PromiseParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PromiseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PromiseParser.RULE_promise

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExistContext(PromiseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PromiseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def basepromise(self):
            return self.getTypedRuleContext(PromiseParser.BasepromiseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExist" ):
                listener.enterExist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExist" ):
                listener.exitExist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExist" ):
                return visitor.visitExist(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(PromiseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PromiseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def promise(self):
            return self.getTypedRuleContext(PromiseParser.PromiseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class SequentialContext(PromiseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PromiseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def promise(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromiseParser.PromiseContext)
            else:
                return self.getTypedRuleContext(PromiseParser.PromiseContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequential" ):
                listener.enterSequential(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequential" ):
                listener.exitSequential(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSequential" ):
                return visitor.visitSequential(self)
            else:
                return visitor.visitChildren(self)


    class ConcurrentContext(PromiseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PromiseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def promise(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromiseParser.PromiseContext)
            else:
                return self.getTypedRuleContext(PromiseParser.PromiseContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcurrent" ):
                listener.enterConcurrent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcurrent" ):
                listener.exitConcurrent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConcurrent" ):
                return visitor.visitConcurrent(self)
            else:
                return visitor.visitChildren(self)


    class OptionalContext(PromiseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PromiseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def promise(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromiseParser.PromiseContext)
            else:
                return self.getTypedRuleContext(PromiseParser.PromiseContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptional" ):
                listener.enterOptional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptional" ):
                listener.exitOptional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptional" ):
                return visitor.visitOptional(self)
            else:
                return visitor.visitChildren(self)


    class UntilContext(PromiseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PromiseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def promise(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromiseParser.PromiseContext)
            else:
                return self.getTypedRuleContext(PromiseParser.PromiseContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntil" ):
                listener.enterUntil(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntil" ):
                listener.exitUntil(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntil" ):
                return visitor.visitUntil(self)
            else:
                return visitor.visitChildren(self)


    class NotExistContext(PromiseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PromiseParser.PromiseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def basepromise(self):
            return self.getTypedRuleContext(PromiseParser.BasepromiseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExist" ):
                listener.enterNotExist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExist" ):
                listener.exitNotExist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExist" ):
                return visitor.visitNotExist(self)
            else:
                return visitor.visitChildren(self)


    class DaemonContext(PromiseContext):
